--- a/index.html
+++ b/index.html
@@ -9,5 +9,26 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div class="hero">
+      <div class="title">
+        <h1>TRENDING DEALS</h1>
+        <div class="back-text">
+          <span>O</span>
+          <span>F</span>
+          <span>F</span>
+          <span>E</span>
+          <span>R</span>
+        </div>
+      </div>
+    </div>
+    <script>
+      let spanText = document.getElementByTagName('span');
+
+      window.onload = function () {
+        for (spanText of spanTexts) {
+          spanText.classList.add('active');
+        }
+      };
+    </script>
   </body>
 </html>
